2006-11-14  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxCalDayTable.m ([UIxCalDayTable
	-hoursToDisplay]): prevent a crash by retaining the
	"hoursToDisplay" array after it's created.
	([UIxCalDayTable -clickableHourCellClass]): new method for the new
	clickable hours DIV.

	* UI/WebServerResources/SchedulerUI.js: made the event
	participation status modification asynchronous, which also fixes a
	bug where the window would sometimes close before the accept or
	decline action was completed. Also, adapted the event handling
	related to the days or weeks view with the new DIV-based layout.

	* UI/Scheduler/UIxCalInlineAptView.m: same as the first below...

	* UI/Scheduler/UIxCalDayTable.m: enhanced to provide the new
	DIV-based presentation of the days and weeks.

	* SoObjects/Appointments/SOGoTaskObject.m: same as below...

	* SoObjects/Appointments/SOGoAppointmentObject.m: lookupName:...
	might return an exception so we have to handle it if we don't
	wanna crash...

2006-11-13  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/SchedulerUI.js: updated the list
	initialization code to use the new event management scheme, adding
	what was missing to be able to delete events and tasks again.

	* UI/WebServerResources/MailerUI.js: added code to activate the
	"Get mails" button. Fixed a bug which prevented messages to be
	deleted.

	* UI/WebServerResources/UIxFreeBusyUserSelector.js: handle tab
	navigation and focus handling of INPUTs.

2006-11-10  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/MailerUI.js: added code to handle the
	possible drag and drop events to manager in the mail module.
	Moving messages, opening parent folders, ...

	* UI/WebServerResources/SOGoDragAndDrop.js: new file containing
	the drag and drop manager as well as the interface to HTMLElement
	to trigger drag and drop events.

	* UI/MailerUI/UIxMailView.m ([UIxMailView -moveAction]): new